# LBMCombinedCollisionOperators

./: .gitignore  CMakeLists.txt  FindwaLBerla.cmake  PostProcessing.py  README.md  fixedGrid.py  install.sh  parameterStudy.py  requirements.txt  runCoarseGrids.sh  runParamStudy.sh  runRe10.sh  runRe100.sh  runRe133.sh  runRe150.sh  runRe30.sh  runRe60.sh
PythonCodegenSweeps/: CMakeLists.txt  D2Q9SRTSweep.py  (+3 more)
benchmark/obstacle/: CMakeLists.txt  createParameterFiles.cpp  squareObstacle.cpp
benchmark/obstacle/BreuerGuo/: CMakeLists.txt
benchmark/obstacle/BreuerGuo/Re10/: CMakeLists.txt
benchmark/obstacle/BreuerGuo/Re10/Nx1000Ny160/: config.prm
benchmark/obstacle/BreuerGuo/Re10/Nx500Ny80/: config.prm
benchmark/obstacle/BreuerGuo/Re100/Nx1000Ny160/: config.prm
benchmark/obstacle/BreuerGuo/Re100/Nx500Ny80/: config.prm
benchmark/obstacle/BreuerGuo/Re133/Nx1000Ny160/: config.prm
benchmark/obstacle/BreuerGuo/Re133/Nx500Ny80/: config.prm
benchmark/obstacle/BreuerGuo/Re150/Nx1000Ny160/: config.prm
benchmark/obstacle/BreuerGuo/Re150/Nx500Ny80/: CMakeLists.txt  config.prm
benchmark/obstacle/BreuerGuo/Re30/Nx1000Ny160/: config.prm
benchmark/obstacle/BreuerGuo/Re30/Nx500Ny80/: CMakeLists.txt  config.prm
benchmark/obstacle/BreuerGuo/Re60/: CMakeLists.txt
benchmark/obstacle/BreuerGuo/Re60/Nx1000Ny160/: config.prm
benchmark/obstacle/BreuerGuo/Re60/Nx500Ny80/: config.prm
benchmark/obstacle/BreuerGuo/parameterStudy/: CMakeLists.txt
benchmark/obstacle/BreuerGuo/parameterStudy/Re10/omega12/uMax10/: config.prm
benchmark/obstacle/BreuerGuo/parameterStudy/Re10/omega12/uMax15/: config.prm
benchmark/obstacle/BreuerGuo/parameterStudy/Re10/omega12/uMax20/: config.prm
benchmark/obstacle/BreuerGuo/parameterStudy/Re10/omega14/uMax10/: config.prm
benchmark/obstacle/BreuerGuo/parameterStudy/Re100/omega14/: CMakeLists.txt
benchmark/obstacle/BreuerGuo/parameterStudy/Re30/: CMakeLists.txt
(+90 files in other folders)
